--- a/_posts/2018-03-26-awsec1-apps.md
+++ b/_posts/2018-03-26-awsec1-apps.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: How to setup AWS EC2 on Clouds
-category: Clouds
+title: apps
+category: apps
 excerpt_separator:  <!--more-->
 ---
 
